page one (event name and info) created

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
   <title>Conference</title>
 </head>
+
 <body>
   <section class="navbar">
     <div class="menu-icon">
@@ -16,8 +21,17 @@
     </div>
     <h1 class="logo">2022<br>_____GAMES_____</h1>
   </section>
-  <section class="pg1-sec"
+  <section class="pg1-sec">
+    <h2 class="hello-world">"Hello, Sharing world"</h2>
+    <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
+    <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of the
+      International Olympic Committee. Held the year following the Summer Olympic Games, The World Games 2022 will
+      showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite athletes
+      from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
+      <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
+  </section>
 
   <script src="/js folder/index.js"></script>
 </body>
+
 </html>
