speakers demo created

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conference</title>
 </head>
-
+<body>
 <body>
   <section class="navbar">
     <div class="menu-icon">
@@ -29,6 +28,15 @@
       showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite athletes
       from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
       <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
+  </section>
+  <section class="user-sec">
+    <p class="date icon-hover"> <img alt="icon" class="icon" src="/Images/icons/icon-calendar.png">View Schedule</p>
+    <p class="ticket icon-hover"> <img alt="icon" class="icon icon2" src="/Images/icons/ticket.png">Buy Tickits Now</p>
+    <p class="shop icon-hover"> <img alt="icon" class="icon" src="/Images/icons/icon-shoping.png">Buy TWG Gear</p>
+    <p class="day-pass icon-hover"> <img alt="icon" class="icon icon2" src="/Images/icons/hearth.png">Day Pass</p>
+  </section>
+  <section class="persons">
+    
   </section>
 
   <script src="/js folder/index.js"></script>
