about page created

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
@@ -12,45 +13,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conference</title>
 </head>
+
 <body>
-<body>
-  <section class="navbar">
-    <div class="menu-icon">
-      <hr class="m-menu">
-      <hr class="m-menu">
-      <hr class="m-menu">
-    </div>
-  </section>
-  <ul class="menu-ul">
-    <img class="close" alt="close" src="./Images/close.png">
-    <li class="links link1"><a class="menu-links" href ="#home">Home</a></li>
-    <li class="links link2"><a class="menu-links" href ="./about.html">About</a></li>
-    <li class="links link3"><a class="menu-links" href ="#program">program</a></li>
-  </ul>
-  <section id="home" class="pg1-sec">
-    <h2 class="hello-world">"Hello, Sharing world"</h2>
-    <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
-    <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of the
-      International Olympic Committee. Held the year following the Summer Olympic Games, The World Games 2022 will
-      showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite athletes
-      from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
+
+  <body>
+    <section class="navbar">
+      <div class="menu-icon">
+        <hr class="m-menu">
+        <hr class="m-menu">
+        <hr class="m-menu">
+      </div>
+      <ul class="menu-ul">
+        <img class="close" alt="close" src="./Images/close.png">
+        <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
+        <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
+        <li class="links link3"><a class="menu-links" href="#program">program</a></li>
+        <li class="links link3"><a class="menu-links" href="#program">Speakers</a></li>
+      </ul>
+    </section>
+    <section id="home" class="pg1-sec">
+      <h2 class="hello-world">"Hello, Sharing world"</h2>
+      <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
+      <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of
+        the
+        International Olympic Committee. Held the year following the Summer Olympic Games, The World Games 2022 will
+        showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite
+        athletes
+        from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
       <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
-  </section>
-  <section id="program" class="user-sec">
-    <p class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-calendar.png">View Schedule</p>
-    <p class="ticket icon-hover"> <img alt="icon" class="icon icon2" src="./Images/icons/ticket.png">Buy Tickits Now</p>
-    <p class="shop icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-shoping.png">Buy TWG Gear</p>
-    <p class="day-pass icon-hover"> <img alt="icon" class="icon icon2" src="./Images/icons/hearth.png">Day Pass</p>
-  </section>
-  <section class="persons">
-    
-  </section>
-
-
-  <!-- <section class="partners">
+    </section>
+    <section id="program" class="user-sec">
+      <div class="program">
+        <h1 class="program-h1">Program</h1>
+        <hr class="program-hr">
+      </div>
+      <div class="program-box">
+        <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-calendar.png">View Schedule
+          <p class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of
+            the
+            International Olympic Committee</p>
+        </h4>
+        <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/ticket.png">Buy Tickits Now
+          <p class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of
+            the
+            International Olympic Committee</p>
+        </h4>>
+        <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-shoping.png">Buy TWG Gear <p
+            class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of the
+            International Olympic Committee</p>
+        </h4>>
+        <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/hearth.png">Day Pass <p
+            class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of the
+            International Olympic Committee</p>
+        </h4>>
+      </div>
+    </section>
+    <section id="speaker" class="persons">
+      <h1 class="feacher-speakers">Featured Speakers</h1>
+      <hr class="speaker-hr1">
+    </section>
+    <button class="more">MORE > </button>
+    <!-- <section class="partners">
     <img class="partner1" alt="Company logo" src="">
   </section> -->
-  <script src="./JS/index.js"></script>
-</body>
+    <script src="./JS/index.js"></script>
+  </body>
 
 </html>
