required changes added

--- a/about.html
+++ b/about.html
@@ -13,59 +13,71 @@
 </head>
 
 <body>
-
-    <body>
-        <section class="navbar">
-            <div class="menu-icon">
-                <hr class="m-menu">
-                <hr class="m-menu">
-                <hr class="m-menu">
-            </div>
-        </section>
-        <ul class="menu-ul">
-            <img class="close" alt="close" src="./Images/close.png">
-            <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
-            <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
-            <li class="links link3"><a class="menu-links" href="#program">program</a></li>
-        </ul>
-        <section class="pg1-sec">
-            <h2 class="hello-world">"Hello, Sharing world"</h2>
-            <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
-            <p class="event-dis">international multi-sport event organized with the support of the International Olympic
-                Committee. Held the year following the Summer Olympic Games, The World Games 2022 will showcase a New
-                Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite athletes from
-                over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world. An
-                anticipated 3,600 elite athletes
-                from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the
-                world.</p>
-            <p class="event-dis enjoy">Buy ticket and enjoy</p>
-            <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
-        </section>
-        <section class="sec-logo">
-            <h2 class="what-logo">The World Games logo</h2>
-            <hr class="logo-hr">
-            <p class="dis-logo">The logo of World Games submmit 2019 was decided through the logo competition from 9
-                June to 12 Nov</p>
-            <img alt="logo" class="com-logo" src="./Images/logi.png">
-        </section>
-        <hr class="line">
-        <section class="red-img">
+    <section class="navbar">
+        <div class="menu-icon">
+            <hr class="m-menu">
+            <hr class="m-menu">
+            <hr class="m-menu">
+        </div>
+    </section>
+    <ul class="menu-ul">
+        <div class="head-line">
+            <img alt="facebook" class="head-img" src="./Images/facebook.png">
+            <img alt="facebook" class="head-img" src="./Images/tweeter.png">
+            <li class="head-link"> English </li>
+            <li class="head-link"> Mypage</li>
+            <li class="head-link">Logout</li>
+        </div>
+        <img class="close" alt="close" src="./Images/close.png">
+        <img alt="logo" class="header-logo" src="./Images/logo.png">
+        <li class="links link1"><a class="menu-links" href="./index.html"> Home</a></li>
+        <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
+        <li class="links link3"><a class="menu-links" href="#program">program</a></li>
+        <li class="links link3"><a class="menu-links" href="#program">Speakers</a></li>
+    </ul>
+    <section class="pg1-sec">
+        <h2 class="hello-world">"Hello, Sharing world"</h2>
+        <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
+        <p class="event-dis">international multi-sport event organized with the support of the International Olympic
+            Committee. Held the year following the Summer Olympic Games, The World Games 2022 will showcase a New
+            Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite athletes from
+            over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world. An
+            anticipated 3,600 elite athletes
+            from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the
+            world.</p>
+        <p class="event-dis enjoy">Buy ticket and enjoy</p>
+        <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
+    </section>
+    <section class="sec-logo">
+        <h2 class="what-logo">The World Games logo</h2>
+        <hr class="logo-hr">
+        <p class="dis-logo">The logo of World Games submmit 2019 was decided through the logo competition from 9
+            June to 12 Nov</p>
+        <img alt="logo" class="com-logo" src="./Images/logi.png">
+    </section>
+    <hr class="line">
+    <section class="past-story">
+        <h1 class="see-past">See past events about World Games logo</h1>
+        <p class="dis-past">logo of World Games submmit 2019 was decided through the logo competition from 9</p>
+        <div class="red-img">
             <img class="img1" src="./Images/2.jpg" alt="Evint Image">
             <img class="img1" src="./Images/1.jpg" alt="Evint Image">
-        </section>
-        <section class="sec-logo partners">
-            <h3 class="what-logo">Partner</h3>
-            <hr class="logo-hr">
-            <div class="partner-logo-container">
-                <img alt="Microsoft logo" class="patner-logo" src="./Images/microsoft.png">
-                <img alt="Coca Cola logo" class="patner2-logo" src="./Images/cocacola.png">
-            </div>
-        </section>
-        <section class="sec-logo last-part">
-            <p class="dis-logo last-p">The World Game <br> Some Rights Reserved.</p>
-        </section>
+        </div>
+    </section>
+    <section class="sec-logo partners">
+        <h3 class="what-logo">Partner</h3>
+        <hr class="logo-hr">
+        <div class="partner-logo-container">
+            <img alt="Microsoft logo" class="patner-logo" src="./Images/microsoft.png">
+            <img alt="Coca Cola logo" class="patner2-logo" src="./Images/cocacola.png">
+        </div>
+    </section>
+    <section class="sec-logo last-part">
+        <img alt="logo" class="footer-logo" src="./Images/logo.png">
+        <p class="dis-logo last-p">The World Game <br> Some Rights Reserved.</p>
+    </section>
 
-        <script src="./JS/index.js"></script>
-    </body>
+    <script src="./JS/index.js"></script>
+</body>
 
 </html>
