--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Lato:wght@900&family=Poppins:wght@100;300&display=swap"
+    rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +25,15 @@
       <hr class="m-menu">
     </div>
     <ul class="menu-ul">
+      <div class="head-line">
+        <img alt="facebook" class="head-img" src="./Images/facebook.png">
+        <img alt="facebook" class="head-img" src="./Images/tweeter.png">
+        <li class="head-link"> English </li>
+        <li class="head-link"> Mypage</li>
+        <li class="head-link">Logout</li>
+      </div>
       <img class="close" alt="close" src="./Images/close.png">
+      <img alt="logo" class="header-logo" src="./Images/logo.png">
       <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
       <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
       <li class="links link3"><a class="menu-links" href="#program">program</a></li>
@@ -66,9 +77,10 @@
       </h4>>
     </div>
   </section>
-  <section id="speaker" class="persons">
+  <section class="person1">
     <h1 class="feacher-speakers">Featured Speakers</h1>
     <hr class="speaker-hr1">
+    <div id="speaker" class= "persons"></div>
   </section>
   <button type="submit" class="more">MORE > </button>
   <script src="./JS/index.js"></script>
