Change social media jpg img to media icons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -14,11 +12,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conference</title>
+  <title>22's Games</title>
+  <link rel="icon" type="image/x-icon" href="./Images/logo.png">
+  <script src="https://kit.fontawesome.com/671b106b6e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <section class="navbar">
+  <section id="home" class="pg1-sec">
+  <div class="navbar">
     <div class="menu-icon">
       <hr class="m-menu">
       <hr class="m-menu">
@@ -26,21 +27,21 @@
     </div>
     <ul class="menu-ul">
       <div class="head-line">
-        <img alt="facebook" class="head-img" src="./Images/facebook.png">
-        <img alt="facebook" class="head-img" src="./Images/tweeter.png">
+        <i class="fa-brands fa-github head-img"></i>
+        <i class="fa-brands fa-linkedin head-img"></i>
         <li class="head-link"> English </li>
         <li class="head-link"> Mypage</li>
         <li class="head-link">Logout</li>
       </div>
       <img class="close" alt="close" src="./Images/close.png">
-      <img alt="logo" class="header-logo" src="./Images/logo.png">
+      <i class="fa-solid fa-gamepad h-logo"></i>
       <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
       <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
       <li class="links link3"><a class="menu-links" href="#program">program</a></li>
       <li class="links link3"><a class="menu-links" href="#program">Speakers</a></li>
+      <li class="links link3 worldGame"><a class="menu-links" href="#home">World Games</li>
     </ul>
-  </section>
-  <section id="home" class="pg1-sec">
+  </div>
     <h2 class="hello-world">"Hello, Sharing world"</h2>
     <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
     <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of
