--- a/index.html
+++ b/index.html
@@ -19,38 +19,36 @@
 
 <body>
   <section id="home" class="pg1-sec">
-  <div class="navbar">
-    <div class="menu-icon">
-      <hr class="m-menu">
-      <hr class="m-menu">
-      <hr class="m-menu">
-    </div>
-    <ul class="menu-ul">
-      <div class="head-line">
-        <i class="fa-brands fa-github head-img"></i>
-        <i class="fa-brands fa-linkedin head-img"></i>
-        <li class="head-link"> English </li>
-        <li class="head-link"> Mypage</li>
-        <li class="head-link">Logout</li>
+    <div class="navbar">
+      <div class="menu-icon">
+        <i class="fa-solid fa-bars m-menu"></i>
       </div>
-      <img class="close" alt="close" src="./Images/close.png">
-      <i class="fa-solid fa-gamepad h-logo"></i>
-      <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
-      <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
-      <li class="links link3"><a class="menu-links" href="#program">program</a></li>
-      <li class="links link3"><a class="menu-links" href="#program">Speakers</a></li>
-      <li class="links link3 worldGame"><a class="menu-links" href="#home">World Games</li>
-    </ul>
-  </div>
-    <h2 class="hello-world">"Hello, Sharing world"</h2>
-    <h1 class="event-name">The World Games <br>2022 Birmingham, USA</h1>
-    <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of
-      the
-      International Olympic Committee. Held the year following the Summer Olympic Games, The World Games 2022 will
-      showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite
-      athletes
-      from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
-    <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
+      <ul class="menu-ul">
+        <div class="head-line">
+          <i class="fa-brands fa-github head-img"></i>
+          <i class="fa-brands fa-linkedin head-img"></i>
+          <li class="head-link"> English </li>
+          <li class="head-link"> Mypage</li>
+          <li class="head-link">Logout</li>
+        </div>
+        <i class="fa-solid fa-gamepad h-logo"></i>
+        <i class="fa-solid fa-xmark close"></i>
+        <li class="links link1"><a class="menu-links" href="#home">Home</a></li>
+        <li class="links link2"><a class="menu-links" href="./about.html">About</a></li>
+        <li class="links link3"><a class="menu-links" href="#program">program</a></li>
+        <li class="links link3"><a class="menu-links" href="#speaker">Speakers</a></li>
+        <li class="links link3 worldGame"><a class="menu-links" href="./about.html#logo">World Games</li>
+      </ul>
+    </div>
+  <h2 class="hello-world">"Hello, Sharing world"</h2>
+  <h1 class="event-name">The World Games <br><span class="year">2022</span>Birmingham, USA</h1>
+  <p class="event-dis">The World Games is an 11-day international multi-sport event organized with the support of
+    the
+    International Olympic Committee. Held the year following the Summer Olympic Games, The World Games 2022 will
+    showcase a New Generation of Global Sports in Birmingham from July 7-17, 2022. An anticipated 3,600 elite
+    athletes
+    from over 100 countries will compete for gold in more than 30 of the fastest growing sports in the world.</p>
+  <p class="event-start">Birmingham, USA | July 7 - 17, 2022</p>
   </section>
   <section id="program" class="user-sec">
     <div class="program">
@@ -58,30 +56,30 @@
       <hr class="program-hr">
     </div>
     <div class="program-box">
-      <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-calendar.png">View Schedule
+      <h4 class="date icon-hover"> <i class="fa-solid fa-calendar-days icon"></i>View Schedule
         <p class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of
           the
           International Olympic Committee</p>
       </h4>
-      <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/ticket.png">Buy Tickits Now
+      <h4 class="date icon-hover"> <i class="fa-solid fa-ticket icon"></i>Buy Tickits Now
         <p class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of
           the
           International Olympic Committee</p>
-      </h4>>
-      <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/icon-shoping.png">Buy TWG Gear <p
+      </h4>
+      <h4 class="date icon-hover"> <i class="fa-sharp fa-solid fa-cart-shopping icon"></i>Buy TWG Gear <p
           class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of the
           International Olympic Committee</p>
       </h4>>
-      <h4 class="date icon-hover"> <img alt="icon" class="icon" src="./Images/icons/hearth.png">Day Pass <p
-          class="sub-text"> World Games is an 11-day international multi-sport event organized with the support of the
+      <h4 class="date icon-hover"> <i class="fa-solid fa-heart icon"></i>Day Pass <p class="sub-text"> World Games is an
+          11-day international multi-sport event organized with the support of the
           International Olympic Committee</p>
-      </h4>>
+      </h4>
     </div>
   </section>
   <section class="person1">
     <h1 class="feacher-speakers">Featured Speakers</h1>
     <hr class="speaker-hr1">
-    <div id="speaker" class= "persons"></div>
+    <div id="speaker" class="persons"></div>
   </section>
   <button type="submit" class="more">MORE > </button>
   <script src="./JS/index.js"></script>
